// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExternalLink /> render as application 1`] = `
<DocumentFragment>
  <a
    aria-disabled="false"
    class="pf-c-button pf-m-link"
    data-ouia-component-id="3"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe="true"
    href="/application/main"
  >
    Application link
  </a>
</DocumentFragment>
`;

exports[`<ExternalLink /> render with internal url 1`] = `
<DocumentFragment>
  <a
    aria-disabled="false"
    class="pf-c-button pf-m-link"
    data-ouia-component-id="2"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe="true"
    href="/application/home/"
  >
    Application page
  </a>
</DocumentFragment>
`;

exports[`<ExternalLink /> render with link 1`] = `
<DocumentFragment>
  <a
    aria-disabled="false"
    class="pf-c-button pf-m-link"
    data-ouia-component-id="0"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe="true"
    href="http://hello.nl/"
  >
    http://hello.nl/
    <span
      class="pf-c-button__icon pf-m-end"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          transform=""
        />
      </svg>
    </span>
  </a>
</DocumentFragment>
`;

exports[`<ExternalLink /> render with link and title 1`] = `
<DocumentFragment>
  <a
    aria-disabled="false"
    class="pf-c-button pf-m-link"
    data-ouia-component-id="1"
    data-ouia-component-type="PF4/Button"
    data-ouia-safe="true"
    href="http://hello.nl/"
  >
    Link to Hello
    <span
      class="pf-c-button__icon pf-m-end"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="1em"
        role="img"
        style="vertical-align: -0.125em;"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
          transform=""
        />
      </svg>
    </span>
  </a>
</DocumentFragment>
`;
